@@ -7,6 +7,8 @@ XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 * New feature: user selectable sorting order for the tabs in the navigation menu
 * New feature: editor 'highlight in outline browser' context menu item
 * Bug fix: exception in some cases when 'highlight in FS browser' is selected
+* New feature: user selectable behavior - to preserve or not the tab order upon
+  selection a tab in the tab list button menu
 
 2013 Dec 14 Sergey Satskiy <sergey.satskiy@gmail.com>
 
